# tor_selenium

./: README.md  architecture.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
puppets/: __init__.py  browser.py  cli.py  exceptions.py  session.py  session_manager.py  tor_manager.py
tests/: __init__.py  test_browser.py  test_metrics.py  test_session_manager.py
