[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "puppets"
dynamic = ["version"]
description = "Parallel Tor browser automation with Python"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Puppets Contributors"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "undetected-chromedriver>=3.5.6",
    "stem>=1.8.0",
    "requests>=2.28.0",
    "selenium>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "pytest-asyncio>=0.21.0",
    "build>=1.0.0",
    "twine>=4.0.0",
    "types-requests>=2.0.0",
]

[project.scripts]
puppets = "puppets.cli:main"

[project.urls]
Homepage = "https://github.com/PrimalDjinn/puppets"
Repository = "https://github.com/PrimalDjinn/puppets.git"
Issues = "https://github.com/PrimalDjinn/puppets/issues"

[tool.setuptools.dynamic]
version = {attr = "puppets.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["puppets*"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
